<resources>
    <string name="app_name">Akiyama</string>

    <string name="open_source_licenses">Open Source Licenses</string>

    <string name="home_menu">Home</string>
    <string name="more_menu">More</string>
    <string name="favorites_menu">Favorites</string>
    <string name="search_text">Search</string>
    <string name="search_favorites_text">Search favorites</string>


    <string name="retry_text">Retry</string>

    <string name="latest_episodes_text">Latest Episodes</string>
    <string name="latest_animes_text">Latest Animes</string>
    <string name="latest_movies_text">Latest Movies</string>
    <string name="latest_ovas_text">Latest Ovas</string>
    <string name="latest_specials_text">Latest Specials</string>

    <string name="add_to_favorites_text">Add to Favorites</string>
    <string name="remove_from_favorites_text">Remove from Favorites</string>

    <string name="finished_text">Finished</string>
    <string name="airing_text">Airing</string>

    <string name="empty_search_text">No results for your search</string>
    <string name="empty_favorites_text">You have not added any favorites!</string>

    <string name="added_to_favorites_text">Added to favorites!</string>
    <string name="removed_from_favorites_text">Removed from favorites!</string>
    <string name="error_favorites_text">Couldn\'t add to favorites</string>


    <string name="episodes_text">Episodes</string>
    <string name="episodes_label_text">Episode</string>
    <string name="next_episode_text">Next Episode</string>

    <string name="select_an_option_text">Select an option</string>

    <string name="more_text">More</string>
    <string name="less_text">Less</string>

    <string name="cancel_text">Cancel</string>

    <string name="preferences_about_section_text">About App</string>

    <string name="preferences_about_text">About</string>
    <string name="preferences_about_summary">Information about the app</string>
    <string name="preferences_twitter_text">Developer</string>
    <string name="preferences_updates_text">Check for updates</string>
    <string name="preferences_updates_summary">Download latest version</string>
    <string name="preferences_version_text">Version</string>
    <string name="preferences_source_code_text">Source Code</string>

    <string name="work_in_progress_text">Work in progress</string>

    <string name="looking_for_update_text">Looking for updates...</string>
    <string name="updated_text">No updates available</string>
    <string name="new_update_text">New update available</string>
    <string name="error_update_text">Couldn\'t get latest update</string>
    <string name="download_update_text">Download</string>
    <string name="downloading_update_text">Downloading</string>


    <string name="about_p1">
        Akiyama is an open-source anime website that web scrapes the AnimeFLV website,
        developed with the objective of learning and improving my coding skills.
    </string>

    <string name="about_p2">
        All the content that can be found in this application is extracted from AnimeFLV.
        Akiyama doesn\'t store any content on our servers and we are not affiliated nor
        collaborating with the website
    </string>

    <string name="icon_credits"><a class="link" href='https://pngtree.com/so/coffee-mug-clipart'>coffee mug clipart png from pngtree.com</a></string>
    <string name="title_activity_main">MainActivity</string>

</resources>