<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.fmaldonado.akiyama.ui.common.Status" />

        <import type="android.view.View" />

        <variable
            name="status"
            type="Status" />

        <variable
            name="isFavorite"
            type="Boolean" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/fixedToolBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:padding="0dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:context=".ui.activities.detail.DetailActivity">


                    <ImageView
                        android:id="@+id/cover"
                        android:layout_width="0dp"
                        android:layout_height="280dp"
                        android:foreground="@drawable/fade_image"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@tools:sample/avatars" />

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="20dp"
                        android:gravity="center_vertical"
                        android:minHeight="100dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:navigationIcon="@drawable/back_icon" />

                    <ImageView
                        android:id="@+id/poster"
                        android:layout_width="120dp"
                        android:layout_height="160dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="00dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/toolbar"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="TextView"
                        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toTopOf="@+id/animeStatus"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/poster"
                        app:layout_constraintTop_toBottomOf="@+id/toolbar"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <TextView
                        android:id="@+id/animeStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="20dp"
                        android:text=""
                        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="@+id/poster"
                        app:layout_constraintStart_toEndOf="@+id/poster"
                        app:layout_constraintTop_toBottomOf="@+id/title" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="@{status == Status.Loaded ? View.VISIBLE : View.GONE}">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/favoriteButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="@drawable/light_ripple"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/favorites_icon_outline"
                            android:visibility="@{!isFavorite ? View.VISIBLE : View.GONE}" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add_to_favorites_text"
                            android:visibility="@{!isFavorite ? View.VISIBLE : View.GONE}" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/favorite_tinted_icon"
                            android:visibility="@{isFavorite ? View.VISIBLE : View.GONE}" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="?colorPrimary"
                            android:text="@string/remove_from_favorites_text"
                            android:visibility="@{isFavorite ? View.VISIBLE : View.GONE}" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:lineHeight="20dp"
                        android:maxLines="3"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        tools:text="Description asdasdasdasdasdasdasdasdasd asdasdasdasd asdasd" />

                    <TextView
                        android:id="@+id/moreButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:ellipsize="end"
                        android:padding="5dp"
                        android:text="@string/more_text"
                        android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
                        android:textColor="@color/md_theme_light_primary" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/genres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/episodes_text"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/episodeList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingBottom="50dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <include
                    android:id="@+id/errorLayout"
                    layout="@layout/error_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:visibility="@{status == Status.Error ? View.VISIBLE : View.GONE}" />

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:visibility="@{status == Status.Loading ? View.VISIBLE : View.GONE}" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>



    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>